add select function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(collect,vicmap_promise)
 S3method(filter,vicmap_promise)
 S3method(head,vicmap_promise)
 S3method(print,vicmap_promise)
+S3method(show_query,vicmap_promise)
 S3method(sql_escape_ident,wfsConnection)
 S3method(sql_escape_string,wfsConnection)
 S3method(sql_translate_env,wfsConnection)
@@ -33,9 +34,10 @@ export(listFields)
 export(listLayers)
 export(newClient)
 export(read_layer_sf)
+export(select)
+export(select.vicmap_promise)
 export(selectWFS)
 export(show_query)
-export(show_query.vicmap_promise)
 export(specify_geom_name)
 export(vicmap_query)
 exportClasses(wfsConnection)
@@ -45,6 +47,7 @@ import(DBI)
 import(methods)
 importFrom(dplyr,collect)
 importFrom(dplyr,filter)
+importFrom(dplyr,select)
 importFrom(dplyr,show_query)
 importFrom(dplyr,sql_escape_ident)
 importFrom(dplyr,sql_escape_string)
