fixing geometric filters

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,9 @@
 S3method(collect,vicmap_promise)
 S3method(filter,vicmap_promise)
 S3method(head,vicmap_promise)
+S3method(polygonFormat,sf)
 S3method(print,vicmap_promise)
+S3method(select,vicmap_promise)
 S3method(show_query,vicmap_promise)
 S3method(sql_escape_ident,wfsConnection)
 S3method(sql_escape_string,wfsConnection)
@@ -22,23 +24,27 @@ export(INTERSECTS)
 export(OVERLAPS)
 export(TOUCHES)
 export(WITHIN)
+export(as.vicmap_promise)
 export(bcdc_query_geodata.bcdc_record)
 export(boundbox)
+export(check_chunk_limit)
 export(collect)
 export(cql_translate)
 export(feature_cols)
 export(feature_hits)
 export(filter)
+export(finalize_cql)
 export(geom_col_name)
 export(listFields)
 export(listLayers)
 export(newClient)
+export(polygonFormat)
 export(read_layer_sf)
 export(select)
-export(select.vicmap_promise)
 export(selectWFS)
 export(show_query)
 export(specify_geom_name)
+export(vicmap_options)
 export(vicmap_query)
 exportClasses(wfsConnection)
 exportMethods(dbQuoteIdentifier)
