quicker col names get

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(feature_hits)
 export(filter)
 export(finalize_cql)
 export(geom_col_name)
+export(get_col_df)
 export(listFields)
 export(listLayers)
 export(newClient)
