--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,12 +22,12 @@ export(OVERLAPS)
 export(TOUCHES)
 export(WITHIN)
 export(collect)
-export(cql_translate)
 export(feature_cols)
 export(feature_hits)
 export(filter)
 export(geom_col_name)
 export(get_col_df)
+export(head)
 export(listLayers)
 export(select)
 export(show_query)
@@ -46,3 +46,4 @@ importFrom(dplyr,sql_escape_ident)
 importFrom(dplyr,sql_escape_string)
 importFrom(dplyr,sql_translate_env)
 importFrom(magrittr,"%>%")
+importFrom(utils,head)
