--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,7 @@
 pandoc: 2.7.2
 pkgdown: 1.5.1
 pkgdown_sha: ~
-articles: []
-last_built: 2020-09-04T06:33Z
+articles:
+  query_vicmap: query_vicmap.html
+last_built: 2021-02-04T02:21Z
 
