--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(sql_escape_string,wfsConnection)
 S3method(sql_translate_env,wfsConnection)
 export("%>%")
 export(BBOX)
+export(BEYOND)
 export(CONTAINS)
 export(CQL)
 export(CROSSES)
@@ -19,6 +20,7 @@ export(DWITHIN)
 export(EQUALS)
 export(INTERSECTS)
 export(OVERLAPS)
+export(RELATE)
 export(TOUCHES)
 export(WITHIN)
 export(collect)
