--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R:
            family = "Cally",
            role = c("aut", "cre"),
            email = "justin.g.cally@gmail.com",
-           comment = c(ORCID = "0000-0003-4584-2220")),
+           comment = c(ORCID = "0000-0003-4584-2220"))
     person(given = "Rachel",
            family = "Swain",
            role = c("ctb"),
