--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -108,9 +108,11 @@ jobs:
         shell: Rscript {0}
         
       - name: Install package
+        if: matrix.config.os == 'macOS-latest' && matrix.config.r == 'release'
         run: R CMD INSTALL .
 
       - name: Deploy package
+        if: matrix.config.os == 'macOS-latest' && matrix.config.r == 'release'
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
