--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -40,6 +40,7 @@ jobs:
       - name: Install dependencies
         run: |
           remotes::install_deps(dependencies = TRUE)
+          install.packages("sf", configure.args = "--with-proj-lib=/usr/local/lib/")
           install.packages("pkgdown", type = "binary")
         shell: Rscript {0}
 
