--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -34,13 +34,13 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ${{ env.R_LIBS_USER }}
-          key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-2-${{ hashFiles('.github/depends.Rds') }}
-          restore-keys: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-2-
+          key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-3-${{ hashFiles('.github/depends.Rds') }}
+          restore-keys: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-3-
 
       - name: Install dependencies
         run: |
+          remotes::install_github("r-spatial/sf", configure.args = "--with-proj-lib=/usr/local/lib/")
           remotes::install_deps(dependencies = TRUE)
-          install.packages("sf", configure.args = "--with-proj-lib=/usr/local/lib/")
           install.packages("pkgdown", type = "binary")
         shell: Rscript {0}
 
