--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -51,4 +51,5 @@ jobs:
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
+          knitr::knit("Readme.Rmd")
           Rscript -e 'pkgdown::deploy_to_branch(new_process = FALSE, clean = T)'
