--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: VicmapR
-Title: R Functions for Accessing Victorian Spatial Data Through WFS 
+Title: Access Victorian Spatial Data Through Web File Services (WFS) 
 Version: 0.1.1
 Authors@R: 
     c(person(given = "Justin",
@@ -11,12 +11,12 @@ Authors@R:
            family = "Swain",
            role = c("ctb"),
            email = "rachelswain1@gmail.com"))
-Description: Easily interfaces R to spatial datasets freely available through 
+Description: Easily interfaces R to spatial datasets available through 
   the Victorian Government's WFS (Web Feature Service). Allows users to read 
-  in `sf` data from these sources and wraps methods from `ows4R`. 
+  in `sf` data from these sources using lazy evaluation. 
 License: MIT + file LICENSE
 Encoding: UTF-8
-LazyData: true
+LazyData: false
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 URL: https://justincally.github.io/VicmapR/,
