--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,11 +10,31 @@ Authors@R:
     person(given = "Rachel",
            family = "Swain",
            role = c("ctb"),
-           email = "rachelswain1@gmail.com"))
+           email = "rachelswain1@gmail.com"),
+           person(given = "Andy",
+             family = "Teucher",
+             role = c("aut"),
+             email = "andy.teucher@gov.bc.ca",
+             comment = c(ORCID = "0000-0002-7840-692X"),
+             comment = "bcdata author"),
+      person(given = "Sam",
+             family = "Albers",
+             role = c("aut"),
+             email = "sam.albers@gov.bc.ca",
+             comment = c(ORCID = "0000-0002-9270-7884"),
+             comment = "bcdata author"),
+      person(given = "Stephanie",
+             family = "Hazlitt",
+             role = c("aut"),
+             email = "stephanie.hazlitt@gov.bc.ca",
+             comment = c(ORCID = "0000-0002-3161-2304"),
+             comment = "bcdata author"),
+      person(given = "Province of British Columbia",
+             role = "cph"))
 Description: Easily interfaces R to spatial datasets available through 
   the Victorian Government's WFS (Web Feature Service): <https://services.land.vic.gov.au/catalogue/publicproxy/guest/dv_geoserver/wfs?request=getCapabilities>. 
   Which allows users to read in 'sf' data from these sources using lazy evaluation. 
-License: MIT + file LICENSE
+License: Apache License (== 2.0) | MIT + file LICENSE
 Encoding: UTF-8
 LazyData: false
 Roxygen: list(markdown = TRUE)
