--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,8 @@ Authors@R:
              comment = c(ORCID = "0000-0002-3161-2304"),
              comment = "bcdata author"),
       person(given = "Province of British Columbia",
-             role = "cph"))
+             role = "cph",
+             comment = "bcdata copyright")))
 Description: Easily interfaces R to spatial datasets available through 
   the Victorian Government's WFS (Web Feature Service): <https://services.land.vic.gov.au/catalogue/publicproxy/guest/dv_geoserver/wfs?request=getCapabilities>. 
   Which allows users to read in 'sf' data from these sources using lazy evaluation. 
