--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,11 +7,11 @@ Authors@R:
            role = c("aut", "cre"),
            email = "justin.g.cally@gmail.com",
            comment = c(ORCID = "0000-0003-4584-2220")),
-    person(given = "Rachel",
+      person(given = "Rachel",
            family = "Swain",
            role = c("ctb"),
            email = "rachelswain1@gmail.com"),
-           person(given = "Andy",
+      person(given = "Andy",
              family = "Teucher",
              role = c("aut"),
              email = "andy.teucher@gov.bc.ca",
@@ -33,8 +33,8 @@ Authors@R:
              role = "cph",
              comment = "bcdata copyright")))
 Description: Easily interfaces R to spatial datasets available through 
-  the Victorian Government's WFS (Web Feature Service): <https://services.land.vic.gov.au/catalogue/publicproxy/guest/dv_geoserver/wfs?request=getCapabilities>. 
-  Which allows users to read in 'sf' data from these sources using lazy evaluation. 
+  the Victorian Government's WFS (Web Feature Service): <https://services.land.vic.gov.au/catalogue/publicproxy/guest/dv_geoserver/wfs?request=getCapabilities>, 
+  which allows users to read in 'sf' data from these sources. VicmapsR uses the lazy querying approach developed by Teucher et al. (2021) for the {bcdata} R package <https://doi.org/10.21105/joss.02927>.
 License: Apache License (== 2.0) | MIT + file LICENSE
 Encoding: UTF-8
 LazyData: false
