--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,7 +34,7 @@ Authors@R:
              comment = "bcdata copyright")))
 Description: Easily interfaces R to spatial datasets available through 
   the Victorian Government's WFS (Web Feature Service): <https://services.land.vic.gov.au/catalogue/publicproxy/guest/dv_geoserver/wfs?request=getCapabilities>, 
-  which allows users to read in 'sf' data from these sources. VicmapsR uses the lazy querying approach developed by Teucher et al. (2021) for the {bcdata} R package <https://doi.org/10.21105/joss.02927>.
+  which allows users to read in 'sf' data from these sources. VicmapsR uses the lazy querying approach and code developed by Teucher et al. (2021) for the {bcdata} R package <https://doi.org/10.21105/joss.02927>.
 License: Apache License (== 2.0) | MIT + file LICENSE
 Encoding: UTF-8
 LazyData: false
