cite apache file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,7 @@ Authors@R:
 Description: Easily interfaces R to spatial datasets available through 
   the Victorian Government's WFS (Web Feature Service): <https://services.land.vic.gov.au/catalogue/publicproxy/guest/dv_geoserver/wfs?request=getCapabilities>, 
   which allows users to read in 'sf' data from these sources. VicmapsR uses the lazy querying approach and code developed by Teucher et al. (2021) for the {bcdata} R package <https://doi.org/10.21105/joss.02927>.
-License: Apache License (== 2.0) | MIT + file LICENSE
+License: Apache License (== 2.0) + file LICENSE-APACHE2 | MIT + file LICENSE
 Encoding: UTF-8
 LazyData: false
 Roxygen: list(markdown = TRUE)
