--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,9 +1,10 @@
-pandoc: 2.3.1
+pandoc: 2.11.4
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
+  beginner_vicmap: beginner_vicmap.html
   query_vicmap: query_vicmap.html
-last_built: 2021-03-04T06:47Z
+last_built: 2022-01-21T05:40Z
 urls:
   reference: https://justincally.github.io/VicmapR/reference
   article: https://justincally.github.io/VicmapR/articles
