--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -75,6 +75,7 @@ jobs:
           RHUB_PLATFORM: linux-x86_64-ubuntu-gcc
         run: |
           Rscript -e "install.packages('stringi')"
+          Rscript -e "install.packages('sf')"
           sudo apt install \
             libicu-dev 
           # install spatial dependencies
