--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -75,19 +75,15 @@ jobs:
         env:
           RHUB_PLATFORM: linux-x86_64-ubuntu-gcc
         run: |
-          sudo apt install \
-            libicu-dev 
-          # install spatial dependencies
-          sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable
-          sudo apt update
-          sudo apt install \
-            libudunits2-dev \
-            libgdal-dev \
-            libgeos-dev \
-            libproj-dev
           Rscript -e "install.packages('stringi')"
           Rscript -e "install.packages('sf')"
           Rscript -e "install.packages('mapview')"
+          sudo apt install \
+            libicu-dev 
+          # install spatial dependencies
+          # sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable
+          sudo apt update
+          sudo apt-get install libgdal-dev libproj-dev libgeos-dev libudunits2-dev
         
       - name: Install dependencies
         run: |
