--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -3,6 +3,7 @@ on:
     branches:
       - main
       - master
+      - pkgdown-fail
 
 name: pkgdown
 
@@ -43,9 +44,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          remotes::install_github("r-spatial/sf", configure.args = "--with-proj-lib=/usr/local/lib/")
           remotes::install_deps(dependencies = TRUE)
           install.packages("pkgdown", type = "binary")
+          sf::sf_extSoftVersion()
         shell: Rscript {0}
 
       - name: Install package
