--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -3,7 +3,10 @@ on:
     branches:
       - main
       - master
-  pull_request: ~
+  pull_request:
+    branches:    
+      - main
+      - master
   schedule:
     - cron: '30 4 * * 1'
 
