pull request on master

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -5,9 +5,7 @@ on:
       - master
       - gdal-fix
   pull_request:
-    branches:    
-      - main
-      - master
+    branches: [ "master" ]
   schedule:
     - cron: '30 4 * * 1'
 
