--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -3,9 +3,7 @@ on:
     branches:
       - main
       - master
-      - gdal-fix
-  pull_request:
-    branches: [ "master" ]
+  pull_request: ~
   schedule:
     - cron: '30 4 * * 1'
 
