--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -65,10 +65,10 @@ jobs:
         run: |
           brew install pkg-config 
           brew install gdal proj geos udunits
-          Rscript -e "install.packages('sf')"
-          Rscript -e "install.packages('mapview')"
-          export LDFLAGS="-L/usr/local/opt/libpq/lib"
-          export CPPFLAGS="-I/usr/local/opt/libpq/include"
+          Rscript -e "install.packages(c("rgeos", "sf", "sp"), type = "source")"
+          Rscript -e "install.packages("rgdal", type = "source",
+                 configure.args = c("--with-proj-include=/usr/local/include",
+                                    "--with-proj-lib=/usr/local/lib"))"
       - name: Install system dependencies
         if: runner.os == 'Linux'
         env:
