--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -65,7 +65,7 @@ jobs:
         run: |
           brew install pkg-config 
           brew install gdal proj geos udunits
-          Rscript -e "install.packages(c("sf"), type = "source")"
+          Rscript -e "install.packages(c("sf", "mapview", "dbplyr", "leaflet"), type = "source")"
       - name: Install system dependencies
         if: runner.os == 'Linux'
         env:
