--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -47,7 +47,7 @@ jobs:
           sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable
           sudo apt-get update
           sudo apt-get install libudunits2-dev libgdal-dev libgeos-dev libproj-dev 
-          Rscript -e "install.packages(c("sf"), type = "source")"
+          Rscript -e "install.packages(c('sf'), type = 'source')"
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
