--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -44,10 +44,15 @@ jobs:
         env:
           RHUB_PLATFORM: linux-x86_64-ubuntu-gcc
         run: |
+          sudo apt install \
+          libicu-dev 
+          # install spatial dependencies
           sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable
-          sudo apt-get update
-          sudo apt-get install libudunits2-dev libgdal-dev libgeos-dev libproj-dev 
-          Rscript -e "install.packages(c('sf'), type = 'source')"
+          sudo apt update
+          sudo apt-get install libgdal-dev libproj-dev libgeos-dev libudunits2-dev
+          Rscript -e "install.packages('stringi')"
+          Rscript -e "install.packages('sf', type = 'source')"
+          Rscript -e "install.packages('mapview')" 
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
