--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -20,9 +20,9 @@ jobs:
         config:
           - {os: macOS-latest,   r: 'release'}
           - {os: windows-latest, r: 'release'}
-          - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
-          - {os: ubuntu-latest,   r: 'release'}
-          - {os: ubuntu-latest,   r: 'oldrel-1'}
+          - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release', args: "'--as-cran'"}
+          - {os: ubuntu-latest,   r: 'release', args: "'--as-cran'"}
+          - {os: ubuntu-latest,   r: 'oldrel-1', args: "'--as-cran'"}
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
