install sf manual

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -48,6 +48,7 @@ jobs:
       - name: Check sf installation
         if: runner.os == 'Linux'
         run: |
+          install.packages("sf", configure.args = "--with-proj-lib=/usr/local/lib/")
           sf::sf_extSoftVersion()
         shell: Rscript {0}
 
