--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -48,7 +48,8 @@ jobs:
       - name: Install dev sf
         if: runner.os == 'Linux'
         run: |
-          devtools::install_github("r-spatial/sf")
+          install.packages("remotes")
+          remotes::install_github("r-spatial/sf")
         shell: Rscript {0}
           
       - name: Check sf installation
