--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -39,11 +39,17 @@ jobs:
           r-version: ${{ matrix.config.r }}
           http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
+      
+      - name: Install spatial deps
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get install libgdal-dev libproj-dev libgeos-dev libudunits2-dev
           
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: any::rcmdcheck
           needs: check
+          cache-version: 2
           
       - name: Install dev sf
         if: runner.os == 'Linux'
