--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -43,7 +43,7 @@ jobs:
       - name: Install spatial deps
         if: runner.os == 'Linux'
         run: |
-          sudo apt-get install libgdal-dev libproj-dev libgeos-dev libudunits2-dev
+          sudo apt-get install libgdal-dev proj-bin libgeos-dev libudunits2-dev
           
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
