convert layer names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(TOUCHES)
 export(WITHIN)
 export(check_geoserver)
 export(collect)
+export(convert_layer_name)
 export(data_citation)
 export(data_dictionary)
 export(feature_cols)
