--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -50,6 +50,7 @@ jobs:
       - name: Check sf installation
         run: |
           sf::sf_extSoftVersion()
+          devtools::install()
         shell: Rscript {0}
 
       - uses: r-lib/actions/check-r-package@v2
