--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -2,7 +2,7 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches: [main, master]
+    branches: [main, master, migration]
   pull_request:
     branches: [main, master]
 
@@ -50,7 +50,6 @@ jobs:
       - name: Check sf installation
         run: |
           sf::sf_extSoftVersion()
-          devtools::install()
         shell: Rscript {0}
 
       - uses: r-lib/actions/check-r-package@v2
