changes to cql translate and filter to deal with dbplyr issues

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,4 +51,5 @@ importFrom(dplyr,filter)
 importFrom(dplyr,select)
 importFrom(dplyr,show_query)
 importFrom(magrittr,"%>%")
+importFrom(rlang,"%||%")
 importFrom(utils,head)
