--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,7 +34,7 @@ Description: Easily interfaces R to spatial datasets available through
   which allows users to read in 'sf' data from these sources. VicmapR uses the lazy querying approach and code developed by Teucher et al. (2021) for the 'bcdata' R package <doi:10.21105/joss.02927>.
 License: Apache License (== 2.0)
 Encoding: UTF-8
-LazyData: false
+LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 URL: https://justincally.github.io/VicmapR/,
@@ -63,7 +63,8 @@ Imports:
     knitr,
     kableExtra,
     mapview,
-    leaflet
+    leaflet,
+    stringr
 VignetteBuilder: knitr
 SystemRequirements: GDAL (>= 3.0.0), GEOS (>= 3.4.0), PROJ (>= 7.0.0)
 Collate: 
@@ -84,5 +85,7 @@ Collate:
     'utils-pipe.R'
     'utils-show_query.R'
     'metadata.R'
+    'convert-layer-names.R'
+    'data.R'
 Depends: 
     R (>= 2.10)
