get abstract in listLayers() from api (#57)
* get abstract as well

* get rid of export for extract abstract

* add news

* update cql translate

* S3 method consistency (CRAN issue)

* md update

* update list features for missing metadata

* readme searches for watercourse

* update news

* update url

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,7 @@ Authors@R:
              role = "cph",
              comment = "bcdata copyright"))
 Description: Easily interfaces R to spatial datasets available through 
-  the Victorian Government's WFS (Web Feature Service): <https://services.land.vic.gov.au/catalogue/publicproxy/guest/dv_geoserver/wfs?request=getCapabilities>, 
+  the Victorian Government's WFS (Web Feature Service): <https://opendata.maps.vic.gov.au/geoserver/ows?request=GetCapabilities&service=wfs>, 
   which allows users to read in 'sf' data from these sources. VicmapR uses the lazy querying approach and code developed by Teucher et al. (2021) for the 'bcdata' R package <doi:10.21105/joss.02927>.
 License: Apache License (== 2.0)
 Encoding: UTF-8
@@ -38,7 +38,7 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 URL: https://justincally.github.io/VicmapR/,
-    https://mapshare.vic.gov.au/vicplan/, https://github.com/justincally/VicmapR/
+    https://www.data.vic.gov.au/, https://github.com/justincally/VicmapR/
 BugReports: https://github.com/justincally/VicmapR/issues
 Suggests: 
     testthat (>= 2.1.0),
