--- a/docs/dev/pkgdown.yml
+++ b/docs/dev/pkgdown.yml
@@ -6,6 +6,6 @@ articles:
   query_vicmap: query_vicmap.html
 last_built: 2022-03-24T01:03Z
 urls:
-  reference: https://justincally.github.io/VicmapR/reference
-  article: https://justincally.github.io/VicmapR/articles
+  reference: https://justincally.github.io/vicspatial/reference
+  article: https://justincally.github.io/vicspatial/articles
 
